centrato testo span

--- a/index.html
+++ b/index.html
@@ -96,6 +96,34 @@
                     Nome Cognome
                 </span>
             </div>
+            <div class="person">
+                <img src="https://picsum.photos/246/146" alt="">
+                <span class="name">
+                    <i class="fas fa-microphone-slash"></i>
+                    Nome Cognome
+                </span>
+            </div>
+            <div class="person">
+                <img src="https://picsum.photos/246/146" alt="">
+                <span class="name">
+                    <i class="fas fa-microphone-slash"></i>
+                    Nome Cognome
+                </span>
+            </div>
+            <div class="person">
+                <img src="https://picsum.photos/246/146" alt="">
+                <span class="name">
+                    <i class="fas fa-microphone-slash"></i>
+                    Nome Cognome
+                </span>
+            </div>
+            <div class="person">
+                <img src="https://picsum.photos/246/146" alt="">
+                <span class="name">
+                    <i class="fas fa-microphone-slash"></i>
+                    Nome Cognome
+                </span>
+            </div>
         </div>
     </main>
     <footer>
@@ -128,7 +156,7 @@
             </div>
             <div class="icon-sub">
                 <i class="fas fa-angle-double-up fa-3x"></i>
-                <span>Share</span>
+                <span>Share Screen</span>
             </div>
 
             <!--                NO SUB              -->
